--- a/index.html
+++ b/index.html
@@ -26,9 +26,11 @@
                 <h3 class="wish" id="home1">Hello, It's Me</h3>
                 <h1 id="fname">SINGU VISHAL</h1>
                 <h3 id="discip">I'm a Engineering student who is passionate in <span class="text"></span></h3>
+               <div class="float">
                 <h3 id="workson">Web Development</h3>
                 <h3 id="workson1">Java Full Stack Developer</h3>
                 <h3 id="workson2">Java Programming</h3>
+               </div>
                     <div id="icon">
                         <a class="linkedi" id="icon" href="https://www.linkedin.com/in/singu-vishal-b4830a248?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" target="_blank"><i id="btn1" class="fa-brands fa-linkedin-in"></i></a>
                         <a class="mail" id="icon" href="mailto:singuvishal123@gmail.com" target="_blank"><i id="btn2" class="fa-solid fa-envelope"></i></a>
@@ -38,7 +40,7 @@
                         <a id="clickhireme" href="mailto:singuvishal123@gmail.com" target="_blank">Hire Me</a>
                     </div>
                     <div class="resumeaf1">
-                        <a id="resmbtn" class="res1" href="https://drive.google.com/file/d/199ucDTYQIgtNKMxqbzDVvTomRkZXghhA/view?ts=6612ca5a" target="_blank">Download Resume</a>
+                        <a id="resmbtn" class="res1" href="https://drive.google.com/file/d/1MV9I2mFiYLVewB3T1-R2EiCXQ4uz1qov/view" target="_blank">Download Resume</a>
                     
                     </div>
             </div>
@@ -56,7 +58,7 @@
                     JavaScript, SQL, Bootstrap, and Spring Boot courses.I am currently
                     seeking role where i can utilize my experience and skill.</p>
                         <div id="resumebtn2" class="resume2">
-                            <a class="res2" href="https://drive.google.com/file/d/199ucDTYQIgtNKMxqbzDVvTomRkZXghhA/view?ts=6612ca5a"  target="_blank" id="resmbtn">Download Resume</a>
+                            <a class="res2" href="https://drive.google.com/file/d/1MV9I2mFiYLVewB3T1-R2EiCXQ4uz1qov/view"  target="_blank" id="resmbtn">Download Resume</a>
                         </div>
             </div>
         </div>
